--- a/TFT/src/User/config_rrf.ini
+++ b/TFT/src/User/config_rrf.ini
@@ -114,9 +114,9 @@ advanced_ok:0
 #### Command Checksum
 # The TFT enriches each G-code to be sent to the mainboard adding a leading sequential line number
 # and a trailing checksum appended after an "*" character used as separator.
-# The checksum is calculated on the G-code with the applied line number. E.g. "G28" is first enriched
-# with a line number (e.g. "N1 G28") and finally a checksum calculated on that enriched G-code is
-# appended (e.g. "N1 G28*46").
+# The checksum algorithm used is "CheckSum8 Xor" and it is calculated on the G-code with the applied
+# line number. E.g. "G28" is first enriched with a line number (e.g. "N1 G28") and finally a checksum
+# calculated on that enriched G-code is appended (e.g. "N1 G28*18").
 # A data integrity check (sequential line number check and checksum check) will be performed on the
 # mainboard. In case of data mismatch (e.g. data corruption due to EMI on communication serial line):
 # - the mainboard will send to the TFT an error ACK message followed by a "Resend: " ACK message to
