--- a/TFT/src/User/config.ini
+++ b/TFT/src/User/config.ini
@@ -305,7 +305,7 @@ terminal_color_scheme:0
 #   Options: [OFF: 0, POPUP: 1, TOAST: 2]
 #     OFF:   No notification. The message is ignored.
 #     POPUP: Display a popup window for user confirmation.
-#     TOAST: A non-blocking Toast notification is displayed for few seconds. No user interaction is needed.
+#     TOAST: A non-blocking toast notification is displayed for few seconds. No user interaction is needed.
 ack_notification:1
 
 #### Files Sorting
