--- a/TFT/src/User/config_rrf.ini
+++ b/TFT/src/User/config_rrf.ini
@@ -105,6 +105,8 @@ tx_slots:2
 #
 # NOTE: Disable it in case:
 #       - no ADVANCED_OK feature is requested/needed by the user.
+#       - ADVANCED_OK feature is not providing good printing results or if Marlin firmware reports
+#         frequent error ACK messages (e.g. unknown command) to the TFT during printing.
 #       - COMMAND_CHECKSUM feature (see description of next setting "command_checksum") is
 #         requested/needed by the user.
 #
