--- a/TFT/src/User/config.ini
+++ b/TFT/src/User/config.ini
@@ -142,7 +142,7 @@ tx_slots:2
 #
 # NOTE: Disable it in case:
 #       - no ADVANCED_OK feature is requested/needed by the user.
-#       - ADVANCED_OK feature is not providing good printing results or if Marlin firmware reports
+#       - ADVANCED_OK feature is not providing good printing results or if the mainboard notifies
 #         frequent error ACK messages (e.g. unknown command) to the TFT during printing.
 #       - COMMAND_CHECKSUM feature (see description of next setting "command_checksum") is
 #         requested/needed by the user.
