--- a/TFT/src/User/config_rrf.ini
+++ b/TFT/src/User/config_rrf.ini
@@ -116,9 +116,9 @@ advanced_ok:0
 #### Command Checksum
 # The TFT enriches each G-code to be sent to the mainboard adding a leading sequential line number
 # and a trailing checksum appended after an "*" character used as separator.
-# The checksum algorithm used is "CheckSum8 Xor" and it is calculated on the G-code with the applied
-# line number. E.g. "G28" is first enriched with a line number (e.g. "N1 G28") and finally a checksum
-# calculated on that enriched G-code is appended (e.g. "N1 G28*18").
+# The checksum is based on algorithm "CheckSum8 Xor" and it is calculated on the G-code with the
+# applied line number. E.g. "G28" is firstly enriched with a line number (e.g. "N1 G28") and finally
+# a checksum calculated on that enriched G-code is appended (e.g. "N1 G28*18").
 # A data integrity check (sequential line number check and checksum check) will be performed on the
 # mainboard. In case of data mismatch (e.g. data corruption due to EMI on communication serial line):
 # - the mainboard will send to the TFT an error ACK message followed by a "Resend: " ACK message to
@@ -126,9 +126,10 @@ advanced_ok:0
 # - the TFT will check the presence on an internal buffer of the G-code with the requested line number:
 #   - if found, the G-code is resent for a maximum of 3 attempts.
 #   - if not found or the maximum number of attempts has been reached, the TFT will reset the line
-#     number with "M110" (sent as an emergency command without the COMMAND_CHECKSUM feature applied)
-#     just to try to avoid further retransmission requests for the same line number or for any out of
-#     synch command already sent to the mainboard (e.g. in case ADVANCED_OK feature is enabled in TFT).
+#     number with an "M110" G-code (immediately sent bypassing any other enqueued G-code) to the
+#     requested line number just to try to avoid further retransmission requests for the same line
+#     number or for any out of synch command already sent to the mainboard (e.g. in case ADVANCED_OK
+#     feature is enabled in TFT).
 #
 # NOTE: Disable it in case:
 #       - printing is controlled by a remote host (e.g. ESP3D, OctoPrint etc.) and a COMMAND_CHECKSUM
@@ -137,7 +138,8 @@ advanced_ok:0
 #         the remote host causing conflicts in case data mismatch will be notified by the mainboard.
 #       - ADVANCED_OK feature is enabled in TFT. Otherwise, any out of synch command already sent to
 #         the mainboard will be discarded by the mainboard and not resent by the TFT due the current
-#         implementation buffers only the last sent command and not all the pending commands.
+#         implementation of COMMAND_CHECKSUM feature on the TFT buffers only the last sent command
+#         and not all the pending commands.
 #
 #   Options: [disable: 0, enable: 1]
 command_checksum:1
